--- a/css/_global.scss
+++ b/css/_global.scss
@@ -63,7 +63,7 @@ a {
     text-decoration: none;
     
 }
-header {
+#header-portrait {
     height: 8vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.65);
@@ -71,7 +71,6 @@ header {
     position: fixed;
     top: 0;
     z-index: 100;
-
     #nav-portrait {
         display: block;
         position: relative;
@@ -165,6 +164,8 @@ header {
             transform: scale(1);
         }
     }
+}
+#header-landscape {
     #nav-landscape {
         display: none;
     }
