--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,8 +16,8 @@
     filter: brightness(40%);
 }
 #first-section {
-    gap: 6rem;
-    scroll-snap-align: center; 
+    gap: 4.5rem;
+    scroll-snap-align: end; 
     .store-name {
         font-size: 3.5rem;
         line-height: 4.5rem;
@@ -68,7 +68,7 @@
     height: 200vh;
     #first-part {
         gap: 1rem;
-        scroll-snap-align: center; 
+        scroll-snap-align: end; 
         .store-name {
             padding: 2rem 0 3rem 0;
             font-size: 2rem;
@@ -121,7 +121,7 @@
                 display: none;
             }
             .orange-font {
-                padding: 1.5rem 0;
+                padding: 1rem 0;
                 font-size: 1.15rem;
                 line-height: 1.75rem;
                 letter-spacing: 0.25px;
@@ -134,7 +134,7 @@
             }
             .gray-font {
                 font-weight: 200;
-                padding: 1.5rem 0;
+                padding: 1rem 0;
                 line-height: 1.5rem;
             }
         }
@@ -143,7 +143,7 @@
     #second-part {
         margin-top: 8vh;
         height: 92vh;
-        scroll-snap-align: center; 
+        scroll-snap-align: start; 
         a {
             color: white;
         }
@@ -155,7 +155,7 @@
                 border: .5px solid black; 
             }
             a {
-                margin-top: 1rem;
+                margin-top: 2rem;
                 background-color: rgb(255, 140, 0);
                 padding: .75rem;
                 border-radius: 15px;
@@ -178,7 +178,6 @@
         }  
     }
 }
-
 #section-menu {
     min-height: 92vh;
     margin-top: 8vh;
@@ -203,7 +202,6 @@
         width: 100vw;
     }
 }
-
 @media screen and (max-width: 375px) {
     header {
         nav {
@@ -414,16 +412,21 @@
 }
 
 @media screen and (orientation: landscape) {
-    header {
+    #header-portrait {
+        display: none;
+    }
+    #header-landscape {
         background-color: rgba(255, 255, 255, 0.75);
         border-bottom: 0;
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 8vh;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+        z-index: 100;
         transition: opacity .5s;
-        #nav-portrait {
-            display: none;
-        }
         #nav-landscape {
             display: block;
             #menu-landscape {
@@ -432,7 +435,7 @@
                     li {
                         list-style-type: none;
                         width: 15vw;
-                        font-size: 1.15rem;
+                        font-size: 1.35rem;
                         color: rgb(50, 50, 50);
                     }
                     #order-online {
@@ -497,7 +500,7 @@
         background-color: white;
         border-radius: 30px 30px 0 0;
         align-items: center;
-        scroll-snap-align: end; 
+        scroll-snap-align: start; 
         #first-part {
             gap: 0;
             width: fit-content;
@@ -615,7 +618,7 @@
         }
     }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (width: 1024px) {
     #first-section {
         #store-info {
             .info {
