--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ body {
     background-color: white;
     border-radius: 30px 30px 0 0;
     align-items: center;
-    scroll-snap-align: start;
+    scroll-snap-align: center;
   }
   #second-section #first-part {
     gap: 0;
