--- a/css/styles.scss
+++ b/css/styles.scss
@@ -500,7 +500,7 @@
         background-color: white;
         border-radius: 30px 30px 0 0;
         align-items: center;
-        scroll-snap-align: start; 
+        scroll-snap-align: center; 
         #first-part {
             gap: 0;
             width: fit-content;
