responsive design (desktop)

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -8,6 +8,7 @@ html {
     scroll-snap-type: y mandatory;
     overflow-x: hidden;
     overflow-y: scroll;
+    height: 100%;
 }
 body {
     background-color: black;
