--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ body {
 }
 
 #first-section {
-  gap: 4.5rem;
+  gap: 3rem;
   scroll-snap-align: center;
 }
 #first-section .store-name {
@@ -281,7 +281,7 @@ body {
   line-height: 2.75rem;
 }
 #second-section #first-part #images {
-  gap: 1rem;
+  gap: 0.75rem;
   width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
@@ -330,8 +330,8 @@ body {
 }
 #second-section #first-part #welcome-message .orange-font {
   padding: 1rem 0;
-  font-size: 1.15rem;
-  line-height: 1.75rem;
+  font-size: 1.1rem;
+  line-height: 1.65rem;
   letter-spacing: 0.25px;
   font-weight: 700;
 }
@@ -361,7 +361,7 @@ body {
   border: 0.5px solid black;
 }
 #second-section #second-part #map a {
-  margin-top: 2rem;
+  margin-top: 1.75rem;
   background-color: rgb(255, 140, 0);
   padding: 0.75rem;
   border-radius: 15px;
@@ -370,12 +370,13 @@ body {
   display: none;
 }
 #second-section #second-part .store-name {
-  font-size: 2rem;
-  line-height: 2.75rem;
+  font-size: 1.75rem;
+  line-height: 2.5rem;
+  padding-top: 2.25rem;
 }
 #second-section #second-part #white-background {
   width: 100vw;
-  height: 120vh;
+  height: 125vh;
   background-color: white;
   position: absolute;
   top: 140vh;
@@ -421,7 +422,7 @@ body {
   #first-section .store-name {
     font-size: 2.75rem;
     line-height: 3.5rem;
-    padding-top: 2rem;
+    padding-top: calc(2rem + 8vh);
   }
   #first-section .store-name p {
     font-size: 0.85rem;
@@ -432,10 +433,13 @@ body {
   #first-section #double-down img {
     width: 12.5vw;
   }
+  #second-section #first-part {
+    gap: 0;
+  }
   #second-section #first-part .store-name {
     font-size: 1.75rem;
     line-height: 2.5rem;
-    padding: 1rem 0 2rem 0;
+    padding: calc(1rem + 8vh) 0 1.5rem 0;
   }
   #second-section #first-part #images {
     gap: 0.75rem;
