--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ body {
 
 #second-section #first-part {
   height: 100vh;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
 }
 #second-section #first-part .store-name {
   padding: calc(2rem + 8vh) 0 2.5rem 0;
@@ -674,7 +674,7 @@ body {
     border-radius: 30px 30px 0 0;
     align-items: center;
     justify-content: end;
-    scroll-snap-align: center;
+    scroll-snap-align: start;
   }
   #second-section #first-part {
     gap: 0;
@@ -742,6 +742,8 @@ body {
   }
   #second-section #second-part #map {
     padding: 0;
+    height: -moz-fit-content;
+    height: fit-content;
     flex-direction: row;
     gap: 5rem;
     align-items: center;
