--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,7 +67,7 @@
 #second-section {
     #first-part {
         height: 100vh;
-        scroll-snap-align: center; 
+        scroll-snap-align: start; 
         .store-name {
             padding: calc(2rem + 8vh) 0 2.5rem 0;
             font-size: 2.25rem;
@@ -514,7 +514,7 @@
         border-radius: 30px 30px 0 0;
         align-items: center;
         justify-content: end;
-        scroll-snap-align: center; 
+        scroll-snap-align: start; 
         #first-part {
             gap: 0;
             width: fit-content;
@@ -579,6 +579,7 @@
             justify-content: center;
             #map {
                 padding: 0;
+                height: fit-content;
                 flex-direction: row;
                 gap: 5rem;
                 align-items: center;
