--- a/css/styles.scss
+++ b/css/styles.scss
@@ -641,7 +641,7 @@
         }
     }
 }
-@media screen and (width: 1024px) {
+@media screen and (min-width: 1024px) {
     #header-landscape {
         #nav-landscape {
             #menu-landscape {
@@ -654,6 +654,10 @@
         }
     }
     #first-section {
+        .store-name {
+            font-size: 3.5rem;
+            line-height: 4.25rem;
+        }
         #store-info {
             .info {
                 width: 18vw;
@@ -679,7 +683,14 @@
     }
     #second-section {
         #first-part {
+            #images {
+                .grid-item {
+                    width: 15vw;
+                    height: 16vh;
+                }
+            }
             #welcome-message {
+                padding-top: 2rem;
                 .orange-font {
                     font-size: 1.15rem;
                     line-height: 1.65rem;
@@ -687,6 +698,7 @@
             }
         }
         #second-part {
+            padding: 3rem 0;
             #map {
                 padding: 0;
                 gap: 2rem;
@@ -703,16 +715,76 @@
             }
         }
     }
+    #footer {
+        p {
+            font-size: .9rem;
+            line-height: 1.25rem;
+        }
+    }
 }
 @media screen and (min-width: 1280px) {
+    #header-landscape {
+        #nav-landscape {
+            #menu-landscape {
+                a {
+                    li {
+                        font-size: 1.25rem;
+                    }
+                }
+            }
+        }
+    }
+    #first-section {
+        .store-name {
+            font-size: 4rem;
+            line-height: 4.75rem;
+        }
+        #store-info {
+            .info {
+                width: 16vw;
+                p {
+                    font-size: 1.25rem;
+                }
+            }
+            #address {
+                p {
+                    line-height: 2.25rem;
+                }
+            }
+            #open-hours {
+                p {
+                    line-height: 1.5rem;
+                }
+            }
+        }
+    }
+    #second-section {
+        #second-part {
+            padding: 3.5rem 0 4rem 0;
+            #map {
+                iframe {
+                    width: 32vw;
+                    height: 260px;
+                }
+                #landscape-only {
+                    p {
+                        font-size: 1rem;
+                        line-height: 1.65rem;
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (min-width: 1366px) {
     #first-section {
         .store-name {
             h1 {
-                font-size: 8rem;
-                line-height: 7rem;
+                font-size: 6rem;
+                line-height: 5.5rem;
             }
             p {
-                font-size: 1.5rem;
+                font-size: 1.25rem;
             }
         }
         #store-info {
@@ -722,7 +794,7 @@
             }
             #address {
                 p {
-                    line-height: 3rem;
+                    line-height: 2.25rem;
                 }
             }
         }
@@ -731,23 +803,68 @@
         #first-part {
             #welcome-message {
                 .orange-font {
-                    font-size: 1.5rem;
-                    line-height: 2.5rem;
+                    font-size: 1.25rem;
+                    line-height: 2.25rem;
                 }
                 .gray-font {
-                    font-size: 1.45rem;
-                    line-height: 2.25rem;
+                    font-size: 1.05rem;
+                    line-height: 1.75rem;
                 }
             }
         }
         #second-part {
+            padding: 2.75rem 0 3.25rem 0;
             #map {
+                iframe {
+                    height: 240px;
+                }
                 #landscape-only {
                     p {
-                        font-size: 1.25rem;
+                        font-size: 1.05rem;
+                        line-height: 1.85rem;
                     }
                 }
             }
         }
     }
+}
+@media screen and (min-width: 1440px) {
+    #header-landscape {
+        #nav-landscape {
+            #menu-landscape {
+                a {
+                    li {
+                        font-size: 1.45rem;
+                    }
+                }
+            }
+        }
+    }
+    #first-section {
+        #store-info {
+            .info {
+                width: 16vw;
+                height: fit-content;
+                padding: 1.75rem 2rem;
+            }
+        }
+    }
+    #second-section {
+        #first-part {
+            justify-content: center;
+            height: 50vh;
+            #images {
+                padding-top: 10vh;
+            }
+        }
+        #second-part {
+            justify-content: center;
+            height: 40vh;
+            padding: 0;
+            #map {
+                padding-bottom: 2.5rem;
+            }
+        }
+    }
+
 }
